--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -2,7 +2,7 @@ name: Build and Release macOS App
 
 on:
   push:
-    branches: [ master, main ]
+    branches: [ '**' ]
   pull_request:
     branches: [ master, main ]
   workflow_dispatch:
